# kiv-cpp

01/: Arena.cpp  Arena.h  CMakeLists.txt  Loader.cpp  Loader.h  Simulation.cpp  Simulation.h  Validator.cpp  Validator.h  inputs.txt  main.cpp
01/objects/: Ball.cpp  Ball.h  GenericObject.cpp  GenericObject.h  Rectangle.cpp  Rectangle.h  Square.cpp  Square.h
02/: CMakeLists.txt  CMemory_Database.h  input.txt  main.cpp  output.txt
02/specialized_rows/: Pair.cpp  Pair.h  Row.cpp  Row.h
